manifests/microbot.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: microbot-deployment
spec:
  selector:
    matchLabels:
      app: microbot
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: microbot
    spec:
      containers:
      - name: microbot
        image: mohankumargupta/microbot
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: microbot-service
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: microbot
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microbot-ingress
spec:
  rules:
  - host: microbot-k3smaster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: microbot-service
          servicePort: http
  - host: microbot.k3smaster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: microbot-service
          servicePort: http
